--- a/style.css
+++ b/style.css
@@ -10,3 +10,13 @@
 .warning {
 	color: red;
 }
+
+html {
+    display: table;
+    margin: auto;
+}
+
+body {
+    display: table-cell;
+    vertical-align: middle;
+}
