--- a/style.css
+++ b/style.css
@@ -11,12 +11,6 @@
 	color: red;
 }
 
-html {
-    display: table;
-    margin: auto;
-}
-
 body {
-    display: table-cell;
-    vertical-align: middle;
+    margin: 0, auto;
 }
